Tue Apr  1 17:22:41 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* Makefile.am, Makefile.in: Add GNATSRC dependency for xe_defs.adb

Fri Mar 28 18:17:59 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe.adb, xe_back.ads: Adapt to new Table package.

Thu Mar 27 16:33:18 1997  Laurent Pautet  <pautet@marvin.enst.fr>

	* xe_utils.ads: Fix bad renaming that was not detected before.

Fri Mar 21 14:20:39 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_check.adb: Always load internal files. Otherwise, a partition
	containing explicitly only predefined units are detected as empty.

Fri Mar 21 11:44:08 1997  Samuel Tardieu  <sam@zaphod.enst.fr>

	* Makefile.am: Make xe_defs.adb and sdefault.adb depend from the
	  Makefile.

Sat Mar  8 16:50:27 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_lead.adb: Use Get_Rsh_Command to build shell script.

Fri Mar  7 18:48:50 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_defs.ads, Makefile.am, Makefile.in: Add function
 	Get_Rsh_Command which is determined at configuration time and set
 	in the body of xe_defs.adb.

	* xe_stubs.adb: Use the previous new feature.

Thu Feb 27 11:07:05 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe_check.adb: Check that a channel has not been declared twice
 	(wuth a different name like (C1, C2 : Channel := (P1, P2)). Check
 	that the pair of partitions is a real pair, and not twice the same
 	partition.

	* xe_stubs.adb: Predefined type partition filer was incorrectly
 	generated. The peer partition name was also incorrect.  Forgot to
 	check that the default filter was not null => illegal with.

	xe.ads, xe.adb: Add Get_Filter for a partition.

Wed Feb 26 22:03:43 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe.ads: Change attribute filter into CFilter (Channel) and add a
 	new one PFilter (Partition). When this attribute applies to
 	predefined type Partition, then a partition always communicates
 	with another one using the given filter. When this attribute