@@ -13,7 +13,6 @@ RSH = @RSH@
 
 bin_SCRIPTS = gnatdist
 libexec_PROGRAMS = dist1
-libexec_SCRIPTS = xe-gcc xe-gcc-filter xe-gcc-post xe-gcc-prep
 dist1_DEPENDENCIES = xe_defs.o sdefault.o
 dist1_SOURCES =
 dist1_LDADD =
