@@ -1,37 +1,0 @@
-#! /bin/sh
-# @configure_input@
-
-PROG=`basename $0`
-NAME=/tmp/${PROG}.$$
-SED=@SED@
-AWK=@AWK@
-
-if grep -i "system.rpc.general" $1 >/dev/null 2>&1; then
-mv -f $1 ${NAME}
-${SED} "
-s/^.*system\.rpc\.general.*$//g
-s/register_server_elaboration/register_receiving_stub/g
-" ${NAME}  | ${AWK} '
-BEGIN {wait = 0; skipline = 0}
-/^package body/{
-  print $0;
-  print "   package RCI_Cache is new System.Partition_Interface.RCI_Info (\""$3"\");";
-  next}
-/protected body when_elaborated is/{skipline = 1; next}
-/protected when_elaborated is/{skipline = 1; next}
-/end when_elaborated;/{skipline = 0; next}
-/function get_rci_package_receiver.*;/{next}
-/function get_active_partition_id.*;/{next}
-/function get_rci_package_receiver.*is/{skipline = 1; next}
-/function get_active_partition_id.*is/{skipline = 1; next}
-/end get_active_partition_id;/{skipline = 0; next}
-/end get_rci_package_receiver;/{skipline = 0; next}
-skipline == 0 {print $0}
-' |\
-${SED} -e "
-s/get_active_partition_id/RCI_Cache.get_active_partition_id/g
-s/get_rci_package_receiver/RCI_Cache.get_rci_package_receiver/g
-s/__quote__/\\'/g
-" >$1
-rm -f ${NAME}
-fi
