@@ -1,20 +1,0 @@
-#! /bin/sh
-# @configure_input@
-
-PROG=xe-gcc
-NAME=/tmp/${PROG}.$$
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libexecdir=@libexecdir@
-FPROG=${libexecdir}/${PROG}
-CALLER=$1
-FILE=`basename $1`
-shift;
-CMMD=$1
-shift;
-
-${CMMD} $@ >${NAME}
-${FPROG}-prep ${NAME} ${FILE}
-${FPROG}-filter ${NAME} ${FILE}
-${FPROG}-post ${NAME} ${FILE}
-mv -f ${NAME} ${CALLER}
